tests/148_conflicting_declarations.err
pirxc compilation failed: exit status 1
Output: tests/148_conflicting_declarations.pirx:3:1: declaration of function bar conflicts with a previous declaration
tests/148_conflicting_declarations.pirx:7:1: declaration of function baz conflicts with a previous declaration
Error: exit status 1
